--- a/Lessons/12_GLMs.Rmd
+++ b/Lessons/12_GLMs.Rmd
@@ -17,7 +17,7 @@ editor_options:
 ```{r, message = FALSE}
 getwd()
 library(tidyverse)
-options(scipen = 4)
+options(scipen = 4) #option to display 4 digits 
 
 PeterPaul.chem.nutrients <- read.csv("./Data/Processed/NTL-LTER_Lake_Chemistry_Nutrients_PeterPaul_Processed.csv")
 
@@ -49,14 +49,15 @@ For the NTL-LTER dataset, can we predict irradiance (light level) from depth?
 irradiance.regression <- lm(PeterPaul.chem.nutrients$irradianceWater ~ PeterPaul.chem.nutrients$depth)
 # another way to format the lm function
 irradiance.regression <- lm(data = PeterPaul.chem.nutrients, irradianceWater ~ depth)
-summary(irradiance.regression)
+summary(irradiance.regression) #we are interested in whether or not it gets darker the deeper down you go (intercept and depth estimated std. wrror, t value, and p value) 
+#will only give you the R value might need to square this
 
 # Correlation
 cor.test(PeterPaul.chem.nutrients$irradianceWater, PeterPaul.chem.nutrients$depth)
 ```
 Question: How would you report the results of this test (overall findings and report of statistical output)?
 
->  
+>  At greater depths the radience decreases or depth accounts for 31% of variance in lake irradiance or irradiance decreases signficiantly with decreasing depths (liner regression, R2= 0.31, df=15,449, and p < 0.0001) or for each 1 m intcease in depth, irradecance decreased by 95 units.
 
 So, we see there is a significant negative correlation between irradiance and depth (lower light levels at greater depths), and that this model explains about 31 % of the total variance in irradiance. Let's visualize this relationship and the model itself. 
 
@@ -71,9 +72,9 @@ An exploratory option to visualize the model fit is to use the function `plot`. 
 4. **Residuals vs. Leverage.** This graph will display potential outliers. The values that fall outside the dashed red lines (Cook's distance) are outliers for the model. Watch for drastic departures of the solid red line from horizontal - this is a sign of a poor model fit.
 
 ```{r, fig.height = 3, fig.width = 4}
-par(mfrow = c(2,2), mar=c(1,1,1,1))
+par(mfrow = c(2,2), mar=c(1,1,1,1)) #mar fuction to plot them all at once
 plot(irradiance.regression)
-par(mfrow = c(1,1))
+par(mfrow = c(1,1)) #mfrow to set it back to not be all at once
 ```
 
 The option best suited for communicating findings is to plot the explanatory and response variables as a scatterplot. 
@@ -82,29 +83,31 @@ The option best suited for communicating findings is to plot the explanatory and
 # Plot the regression
 irradiancebydepth <- 
   ggplot(PeterPaul.chem.nutrients, aes(x = depth, y = irradianceWater)) +
-  #ylim(0, 2000) +
+  ylim(0, 2000) +
   geom_point() 
 print(irradiancebydepth) 
+#thinking about log transforming data to make it look more lineral with the data
 ```
 
 Given the distribution of irradiance values, we don't have a linear relationship between x and y in this case. Let's try log-transforming the irradiance values.
 
 ```{r, fig.height = 3, fig.width = 4}
 PeterPaul.chem.nutrients <- filter(PeterPaul.chem.nutrients, 
-                                   irradianceWater != 0 & irradianceWater < 5000)
-irradiance.regression2 <- lm(data = PeterPaul.chem.nutrients, log(irradianceWater) ~ depth)
+                                   irradianceWater != 0 & irradianceWater < 5000) #remove 3 points of data that is = to 0 to clean up data- irradiance is not 0 until 5000
+irradiance.regression2 <- lm(data = PeterPaul.chem.nutrients, log(irradianceWater) ~ depth) #if we log() our data in question to see if we can get a liner model. R^2 is a lot higher 0.72 and better characterizing our data
 summary(irradiance.regression2)
 
 par(mfrow = c(2,2), mar=c(1,1,1,1))
 plot(irradiance.regression2)
 par(mfrow = c(1,1))
 
-# Add a line and standard error for the linear regression
+# Add a line and standard error for the linear regression and make graph look better
 irradiancebydepth2 <- 
   ggplot(PeterPaul.chem.nutrients, aes(x = depth, y = irradianceWater)) +
-  geom_smooth(method = "lm") +
-  scale_y_log10() +
-  geom_point() 
+  geom_smooth(method = "lm", se = FALSE, color = "black") + #plot relationship between depth and irradiance for line of best fit
+  scale_y_log10() + #this is to make it scaled closer to the data from irradiance water
+  labs (x= "Depth (m)", y = "Irradiance (W/m²)")+
+  geom_point(alpha=0.5, color = "dodgerblue")  #point format pch = 1
 print(irradiancebydepth2) 
 
 # SE can also be removed
@@ -115,8 +118,6 @@ irradiancebydepth2 <-
     geom_smooth(method = 'lm', se = FALSE, color = "black")
 print(irradiancebydepth2)
 
-# Make the graph attractive
-
 ```
 
 ## Non-parametric equivalent: Spearman's Rho
@@ -124,7 +125,7 @@ As with the t-test and ANOVA, there is a nonparametric variant to the linear reg
 
 ``` {r}
 cor.test(PeterPaul.chem.nutrients$irradianceWater, PeterPaul.chem.nutrients$depth, 
-         method = "spearman", exact = FALSE)
+         method = "spearman", exact = FALSE) #
 ```
 
 ## Multiple Regression
@@ -133,25 +134,26 @@ It is possible, and often useful, to consider multiple continuous explanatory va
 ``` {r, fig.height = 3, fig.width = 4}
 TPregression <- lm(data = subset(PeterPaul.chem.nutrients, lakename == "Paul Lake"), 
                    tp_ug ~ depth + dissolvedOxygen)
-summary(TPregression)
+summary(TPregression) #data is subset of peter paul dataset with lake is Paul. To subset data within a test.
 
 TPplot <- ggplot(subset(PeterPaul.chem.nutrients, lakename == "Paul Lake"), 
                  aes(x = dissolvedOxygen, y = tp_ug, color = depth)) +
   geom_point() +
   xlim(0, 20)
-print(TPplot)
+print(TPplot) #plot one of the variables as a color aesthetic. It does matter the order
 
 par(mfrow = c(2,2), mar=c(1,1,1,1))
 plot(TPregression)
 par(mfrow = c(1,1))
 
+#consider all predictor variables all at one time. We will just focus on paul lake (undisturbed state). In this case we will have two betas : y = aopha (depth =o and disolved o2 = 0) + Beta1 (depth) + Beta 2 (dissolved o2 ) + Error. This data showed that there is significant data regarding depth and DO. 
 ```
 
 ## Correlation Plots
 We can also make exploratory plots of several continuous data points to determine possible relationships, as well as covariance among explanatory variables. 
 
 ```{r, fig.height = 3, fig.width = 4}
-#install.packages("corrplot")
+#install.packages("corrplot")-- grab our og dataset and grab only the columns wuth the tn data and use the na_omit tool to remove all NA values. We create a correlation matrix with the cor() function to see the correlation. Then use the corplot() function on the atrix created to show the data and plot it as an ellipse
 library(corrplot)
 PeterPaulnutrients <- 
   PeterPaul.chem.nutrients %>%
@@ -169,14 +171,18 @@ However, it is possible to over-parameterize a linear model. Adding additional e
 Let's say we want to know which explanatory variables will allow us to best predict total phosphorus concentrations. Potential explanatory variables from the dataset could include depth, dissolved oxygen, temperature, PAR, total N concentration, and phosphate concentration.
 
 ```{r}
-Paul.naomit <- PeterPaul.chem.nutrients %>%
-  filter(lakename == "Paul Lake") %>%
+Paul.naomit <- PeterPaul.chem.nutrients %>% #create a new dataframe
+  filter(lakename == "Paul Lake") %>% #tp within paul lake and remove any NAs
   na.omit()
 
 TPAIC <- lm(data = Paul.naomit, tp_ug ~ depth + dissolvedOxygen + 
-              temperature_C + tn_ug + po4)
-step(TPAIC)
+              temperature_C + tn_ug + po4) 
+#create a model to predict TP and relationships between depth, DO, temp, TN, and phosphates
+step(TPAIC) 
+# This will run a seires of AIC test. Starts with our full model by the5 variables, and then take each one of the variables out of the model and compute a different AIC values for each of the different options and will pick the lowest AIC value and will model that
 TPmodel <- lm(data = Paul.naomit, tp_ug ~ dissolvedOxygen + temperature_C + tn_ug)
-summary(TPmodel)
+#lineral model is created and come up with different formulation of the model to tell us which might be better- this is the best model recommended for us to run
+summary(TPmodel) #summary of the model
 
+#this helps us find the best way to explain our data in the best way. The better model has the smaller AIC values. 
 ```
