--- a/Assignments/A07_GLMs_Week2.Rmd
+++ b/Assignments/A07_GLMs_Week2.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 7: GLMs week 2 (Linear Regression and beyond)"
-author: "Student Name"
+author: "Masha Edmondson"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
@@ -27,10 +27,20 @@ The completed exercise is due on Tuesday, February 25 at 1:00 pm.
 
 ```{r}
 #1
+getwd()
+library(tidyverse)
+library(nlme)
+library(piecewiseSEM)
+options(scipen = 4) 
 
+NTL_LTER_ChemistryPhysics_Raw <- read_csv("./Data/Raw/NTL-LTER_Lake_ChemistryPhysics_Raw.csv")
+NTL_LTER_ChemistryPhysics_Processed <- read_csv("Data/Processed/NTL-LTER_Lake_ChemistryPhysics_PeterPaul_Processed.csv")
 
 #2
-
+mytheme <- theme_classic(base_size = 14) +
+  theme(axis.text = element_text(color = "black"), 
+        legend.position = "top")
+theme_set(mytheme)
 ```
 
 
@@ -47,10 +57,23 @@ Research question: What is the best set of predictors for lake temperatures in J
 
 ```{r}
 #3
-
+NTL.July <- 
+  NTL_LTER_ChemistryPhysics_Raw %>%
+  select(lakename:temperature_C: year4 : daynum : depth) %>%
+  filter(daynum > 182 & daynum < 213) %>% #182 to 213 for daynum of July
+  na.exclude()
 
 #4
+NTL.July.AIC <- NTL.July %>% #create a new dataframe
+  filter(lakename == "Paul Lake") %>% #
+  na.omit()
 
+NTLAIC <- lm(data = NTL.July.AIC, year4 ~ daynum + depth) 
+step(TPAIC) 
+
+NTLmodel <- lm(data = NTL.July.AIC, tp_ug ~ dissolvedOxygen + temperature_C + tn_ug)
+#lineral model is created and come up with different formulation of the model to tell us which might be better- this is the best model recommended for us to run produced by AIC
+summary(TPmodel) #summary of the model
 ```
 
 5. What is the final set of explanatory variables that predict temperature from your multiple regression? How much of the observed variance does this model explain?
@@ -61,6 +84,20 @@ Research question: What is the best set of predictors for lake temperatures in J
 
 ```{r}
 #6
+NTL.anova.2way <- aov(data = NTLmodel, temperature_C ~ depth * lakename) 
+summary(NTL.anova.2way) #sig difference between lake name and month and we want to inperpret interaction 
+
+# Format as lm
+NTL.anova.2way2 <- lm(data = NTLmodel, temperature_C ~ depth * lakename)
+summary(NTL.anova.2way2)
+
+TukeyHSD(NTL.anova.2way)
+
+NTL_interaction.july <-with(NTLmodel, interaction(depth, lakename))
+NTL.interaction.anova <- aov(data = NTLmodel, temperature_C ~ NTL_interaction.july)
+
+NTL_interaction_groups <-HSD.test(TP.interaction.anova, "NTL_interaction.july", group = TRUE)
+NTL_interaction_groups
 
 ```
 
