--- a/Assignments/A07_GLMs_Week2.Rmd
+++ b/Assignments/A07_GLMs_Week2.Rmd
@@ -31,10 +31,10 @@ getwd()
 library(tidyverse)
 library(nlme)
 library(piecewiseSEM)
-options(scipen = 4) 
 
-NTL_LTER_Chem_Raw <- read_csv("./Data/Raw/NTL-LTER_Lake_ChemistryPhysics_Raw.csv")
-NTL_LTER_Litter<- read_csv("./Data/Processed/NEON_NIWO_Litter_mass_trap_Processed.csv")
+
+NTL_LTER_Chem_Raw <- read.csv("./Data/Raw/NTL-LTER_Lake_ChemistryPhysics_Raw.csv")
+NTL_LTER_Litter<- read.csv("./Data/Processed/NEON_NIWO_Litter_mass_trap_Processed.csv")
 
 #2
 mytheme <- theme_classic(base_size = 14) +
@@ -58,18 +58,18 @@ Research question: What is the best set of predictors for lake temperatures in J
 ```{r}
 #3
 NTL.July <- 
-  NTL_LTER_Lake_ChemistryPhysics_Raw %>%
-  select(lakename, temperature_C: year4 : daynum : depth) %>%
-  filter(daynum > 182 & daynum < 213) %>% #182 to 213 for daynum of July
+  NTL_LTER_Chem_Raw %>%
+  filter(daynum > 182 & daynum < 213)%>%
+  select(lakename, temperature_C, year4 , daynum , depth) %>%
   na.exclude()
 
 #4
 
-NTLAIC <- lm(data = NTL.July.AIC, temperature_C~ year4 + daynum + depth) 
+NTLAIC <- lm(data = NTL.July, temperature_C~ year4 + daynum + depth) 
 step(NTLAIC) 
 
-NTLmodel <- lm(data = NTL.July.AIC, tp_ug ~ dissolvedOxygen + temperature_C + tn_ug)
-summary(TPmodel) #summary of the model
+NTLmodel <- lm(data = NTL.July, temperature_C~ year4 + daynum + depth)
+summary(NTLmodel) 
 ```
 
 5. What is the final set of explanatory variables that predict temperature from your multiple regression? How much of the observed variance does this model explain?
@@ -81,10 +81,10 @@ summary(TPmodel) #summary of the model
 ```{r}
 
 #6
-NTL.ancova.main <- lm(data = NTLmodel, temperature_C ~ depth*lakename)
+NTL.ancova.main <- lm(data = NTL.July, temperature_C ~ depth*lakename)
 summary(NTL.ancova.main) 
 
-NTL.ancova.interaction <- lm(data = NTLmodel, temperature_C ~ depth*lakename)
+NTL.ancova.interaction <- lm(data = NTL.July, temperature_C ~ depth*lakename)
 summary(NTL.ancova.interaction)
 
 ```
@@ -96,12 +96,11 @@ summary(NTL.ancova.interaction)
 8. Create a graph that depicts temperature by depth, with a separate color for each lake. Add a geom_smooth (method = "lm", se = FALSE) for each lake. Make your points 50 % transparent. Adjust your y axis limits to go from 0 to 35 degrees. Clean up your graph to make it pretty. 
 
 ```{r}
-#8 - what is the data here
+#8 - 
 ANCOVAplot <- ggplot(NTL.July, aes(x = temperature_C, y = depth, color = lakename)) + 
   geom_point() + 
   labs(x= "Temperature (C)", y = "Depth (m)", color = "")+
   #scale_color_brewer(palete = "Dark 2")
-  #scale_color_manual(values = c("darkblue", "red"))+
   geom_smooth(method = "lm", se = FALSE) +
   xlim(0, 35)
 print(ANCOVAplot)
