--- a/Lessons/14_TimeSeries.Rmd
+++ b/Lessons/14_TimeSeries.Rmd
@@ -69,6 +69,7 @@ Let's look at what the dataset contains for mean daily discharge.
 ggplot(EnoDischarge, aes(x = datetime, y = discharge.mean)) +
   geom_line() +
   labs(x = "", y = expression("Discharge (ft"^3*"/s)"))
+#not overliying trend in the data. There is no clear relationship that might obscure meaningful data. There are some high outliers and high variability among data, and missing data from 1970-1990
 ```
 
 Notice there are missing data from 1971 to 1985. Gaps this large are generally an issue for time series analysis, as we don't have a continuous record of data or a good way to characterize any variability that happened over those years. We will illustrate a few workarounds to address these issues. 
@@ -77,13 +78,13 @@ Let's start by removing the NAs and splitting the dataset into the early and lat
 
 ```{r}
 EnoDischarge.complete <- EnoDischarge %>%
-  drop_na(discharge.mean)
+  drop_na(discharge.mean) #remove the NAs for the missing data in the years of 1970-1990
 
 EnoDischarge.early <- EnoDischarge.complete %>%
-  filter(datetime < as.Date("1985-01-01"))
+  filter(datetime < as.Date("1985-01-01")) #just select data from early dataset
 
 EnoDischarge.late <- EnoDischarge.complete %>%
-  filter(datetime > as.Date("1985-01-01"))
+  filter(datetime > as.Date("1985-01-01")) #just select data from late dataset
 ```
 
 ## Decomposing a time series dataset
@@ -103,6 +104,7 @@ Note: time series objects must be equispaced. In our case, we have daily data wi
 
 ```{r}
 EnoDischarge.late_ts <- ts(EnoDischarge.late[[8]], frequency = 365)
+#anything after the year 1984, 8th column has discharge mean and the frequency creates daily results. it is a time series (ts) so we dont overwrite the data and shows up in our values
 ```
 
 The `stl` function decomposes the time series object into its component parts. We must specify that the window for seasonal extraction is either "periodic" or a specific number of at least 7. The decomposition proceeds through a loess (locally estimated scatterplot smoothing) function.
@@ -114,12 +116,14 @@ EnoDischarge.late_Decomposed <- stl(EnoDischarge.late_ts, s.window = "periodic")
 
 # Visualize the decomposed series. 
 plot(EnoDischarge.late_Decomposed)
+#data is the actual data, remainder is leftover effects and outliers in the data because the seasonal or trend scales are realively small and its leftover data from our dataset or randomcompent of the data. 
 
 # We can extract the components and turn them into data frames
 EnoDischarge.late_Components <- as.data.frame(EnoDischarge.late_Decomposed$time.series[,1:3])
 EnoDischarge.late_Components <- mutate(EnoDischarge.late_Components,
                       Observed = EnoDischarge.late$discharge.mean,     
                       Date = EnoDischarge.late$datetime)
+# 3 coldumns refer to the seasonal, tred, and remainder. I would like to take ts and grab columns 1-3 by saying all of the rows [, and columns 1-3]. this pulls the time series into a plot. We can mutate the data set by creating observed discharge and date.
 
 # Visualize how the trend maps onto the data
 ggplot(EnoDischarge.late_Components) +
@@ -134,7 +138,6 @@ ggplot(EnoDischarge.late_Components) +
   geom_line(aes(y = seasonal, x = Date), color = "#c13d75ff") +
   geom_hline(yintercept = 0, lty = 2) +
   ylab(expression("Discharge (ft"^3*"/s)"))
-
 ```
 
 Note that the decomposition can yield negative values when we apply a seasonal adjustment or a trend adjustment to the data. The decomposition is not constrained by a lower bound of zero as discharge is in real life. Make sure to interpret with caution!
@@ -161,18 +164,22 @@ Let's say we wanted to know whether discharge was higher in the early period or 
 ```{r}
 EnoDischarge.early.subsample <- sample_n(EnoDischarge.early, 5000)
 EnoDischarge.late.subsample <- sample_n(EnoDischarge.late, 5000)
+#assumptions for t-test well distributed across the data-set, equal variance across the two datasets. our P-value is saying that our data is not well distributed 
 
 shapiro.test(EnoDischarge.early.subsample$discharge.mean)
 shapiro.test(EnoDischarge.late.subsample$discharge.mean)
-
+#uneuqal variance across all of our dataset so it violates our t-test and shapiro test
 var.test(EnoDischarge.early$discharge.mean, EnoDischarge.late$discharge.mean)
 
-wilcox.test(EnoDischarge.early$discharge.mean, EnoDischarge.late$discharge.mean)
+wilcox.test(EnoDischarge.early$discharge.mean, EnoDischarge.late$discharge.mean) #sig difference in disrcharge across the dataset
+summary(EnoDischarge.early$discharge.mean)
+summary(EnoDischarge.late$discharge.mean)
 ```
 
 How might you interpret the results of this test, and how might you represent them graphically?
 
->
+> We would used the summary function to better understand our data. From that summary we would have a two frame graph with the same axes. or use a blox plot/ violin/density plot.
+Mean daily dischare in the Eno River from 1927- 1971 as significantly higher than mean daily discharge from 1985-2019 (Wilcox testm W= 1.17*10^8, p<0.0001).
 
 ### Monotonic trend analysis
 
