--- a/Assignments/A07_GLMs_Week2.Rmd
+++ b/Assignments/A07_GLMs_Week2.Rmd
@@ -1,9 +1,11 @@
 ---
-title: "Assignment 7: GLMs week 2 (Linear Regression and beyond)"
+title: 'Assignment 7: GLMs week 2 (Linear Regression and beyond)'
 author: "Masha Edmondson"
-output: pdf_document
 geometry: margin=2.54cm
-editor_options: 
+output:
+  pdf_document: default
+  word_document: default
+editor_options:
   chunk_output_type: console
 ---
 
@@ -135,4 +137,4 @@ anova(litter_mixed_random, litter_mixed)
 
 d. continued... Is the mixed effects model a better model than the fixed effects model? How do you know?
 
-> Answer: I believe that the mixed random effects model is better than the fixed effect model through comparing the linear relationships. The R-squared value for the model without random effect is 0.2516, while the R-squared value for the random effect model in 0.24.
+> Answer: I believe that the model without random effects  is better than the fixed effect model through comparing the linear relationships and the AIC. The AIC value for the mixed effect model (litter_mixed_random) is 9038, and the AIC value for the fixed effect model (litter mixed) is 9058. I also compared the linerar relationship through the r-squared values. The R-squared value for the model without random effect is 0.2516, while the R-squared value for the random effect model in 0.26. From this analysis I believe that litter_mixed, the model without random effect is the better model. 
