--- a/Assignments/A07_GLMs_Week2.tex
+++ b/Assignments/A07_GLMs_Week2.tex
@@ -978,10 +978,15 @@ Answer: 2 \%
 \end{enumerate}
 
 \begin{quote}
-Answer: I believe that the mixed random effects model is better than the
-fixed effect model through comparing the linear relationships. The
-R-squared value for the model without random effect is 0.2516, while the
-R-squared value for the random effect model in 0.24.
+Answer: I believe that the model without random effects is better than
+the fixed effect model through comparing the linear relationships and
+the AIC. The AIC value for the mixed effect model
+(litter\_mixed\_random) is 9038, and the AIC value for the fixed effect
+model (litter mixed) is 9058. I also compared the linerar relationship
+through the r-squared values. The R-squared value for the model without
+random effect is 0.2516, while the R-squared value for the random effect
+model in 0.26. From this analysis I believe that litter\_mixed, the
+model without random effect is the better model.
 \end{quote}
 
 \end{document}
